k8s/weblate/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: weblate
  labels:
    app.kubernetes.io/part-of: weblate
    pod-security.kubernetes.io/enforce: baseline
